package com.zergatstage.hw03.model;

public enum CarType {
    Sedan,
    Hatchback,
    Pickup,
    Sport
}