package com.zergatstage.hw03.model;

public enum FuelType {
    Diesel,
    Gasoline
}
