package com.zergatstage.hw03.model;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class GearBox {
	private GearboxType type;
	private String manufacturer;
}
