package com.zergatstage.hw03.model;

/**
 * Тип коробки передач
 */
public enum GearboxType {
    AT, // Automatic transmission
    MT  // Manual transmission
}

