package com.zergatstage.hw03.model;

/**
 * Заправочная станция
 */
public interface Refueling {

    /**
     * Заправка
     */
    void fuel(FuelType fuelType);
}
