package com.zergatstage.hw03.model;

public interface Wiping {

    void wipMirrors();
    void wipWindshield();
    void wipHeadlights();

}
